    changed column was not propagated to Oracle.
    Report and diagnosis by "jopoly".
  - Don't free() strings in the environment.
    This could lead to crashes and unpredictable behavior.
  - Set the Oracle session time zone from the PostgreSQL session time zone.
    That makes TIMESTAMP WITH LOCAL TIME ZONE translate correctly.

  Enhancements:
  - Skip Oracle savepoint management if the foreign server option
    "isolation_level" is set to "read_only" or if we are inside a read-only
    PostgreSQL transaction.  This saves some round trips and avoids Oracle
    errors that might be thrown when entering a PL/pgSQL exception handler.
    Per suggestion from "math-g".
  - Use explicit bulk fetching into arrays rather than OCI prefetching for
    Oracle SELECT statements.  This greatly improves performance for LOB
    and LONG columns, since OCI prefetching didn't work if these data types.
    The limitation still applies for SDO_GEOMETRY columns.  A new option
    "lob_prefetch" is used to configure how much of the LOBs is fetched
    with the rows to reduce the number of round trips.  This enhancement
    was generously sponsored by Mipih (https://www.mipih.fr/).

Version 2.5.0, released 2022-10-28

  Bugfixes:
  - Use the correct user mapping for views on foreign tables.
    This should use the mapping associated with the view owner.
    Reported by "JSilex".
  - Fix a spurious error on UPDATE or DELETE if the column options "key" and
    "strip_zeros" are used on the same column.
    Report and patch by Noriyoshi Shinoda.
  - Fix "out of memory" and other errors on Linux systems with FIPS enabled.
    The cause is that calculating MD5 hashes on such systems causes errors.
    Reported by Hank Drews.
  - Handle Oracle's TIMESTAMP WITH LOCAL TIME ZONE correctly.
    Oracle converts such values to its session time zone on output, but does not
    add a time zone offset, so PostgreSQL interpreted them incorrectly.
    Reported by "JamesInform".

  Enhancements: